Project1/force-app/main/default/objects/Guild_Member__c/Guild_Member__c.object-meta.xml
<CustomObject>
    <label>Guild Member</label>
    <nameField>
        <label>Guild Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guild Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>