Project1/force-app/main/default/objects/Guild_Member__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this guild member active with the guild?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>