Project1/force-app/main/default/objects/Guild_Member__c/fields/Artificer_Level__c.field-meta.xml
<CustomField>
    <fullName>Artificer_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Artificer Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>