Project1/force-app/main/default/objects/Guild_Member__c/fields/Date_Employment_Ended__c.field-meta.xml
<CustomField>
    <fullName>Date_Employment_Ended__c</fullName>
    <label>Date Employment Ended</label>
    <type>Date</type>
</CustomField>