Project1/force-app/main/default/objects/Guild_Member__c/fields/Druid_Level__c.field-meta.xml
<CustomField>
    <fullName>Druid_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Druid Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>