Project1/force-app/main/default/objects/Guild_Member__c/fields/Guild_Hall__c.field-meta.xml
<CustomField>
    <fullName>Guild_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guild Hall</label>
    <referenceTo>Guild_Hall__c</referenceTo>
    <relationshipLabel>Guild Members</relationshipLabel>
    <relationshipName>Guild_Members</relationshipName>
    <type>Lookup</type>
</CustomField>