Project1/force-app/main/default/objects/Guild_Member__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Member Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>