Project1/force-app/main/default/objects/Guild_Member__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Why do they no longer work here?</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>