Project1/force-app/main/default/objects/Guild_Member__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>The guild member excels at these things.</description>
    <inlineHelpText>What does this guild member excel at?</inlineHelpText>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skills</valueSetName>
    </valueSet>
</CustomField>