Project1/force-app/main/default/objects/Guild_Member__c/fields/Total_Level__c.field-meta.xml
<CustomField>
    <fullName>Total_Level__c</fullName>
    <formula>Artificer_Level__c +  Barbarian_Level__c + Bard_Level__c + Cleric_Level__c + Druid_Level__c + Fighter_Level__c + Monk_Level__c + Paladin_Level__c + Ranger_Level__c + Rogue_Level__c + Sorcerer_Level__c + Warlock_Level__c + Wizard_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>