Project1/force-app/main/default/objects/Guild_Member__c/validationRules/Levels_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Levels_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Artificer_Level__c &lt; 0 ||  Barbarian_Level__c &lt; 0 || Bard_Level__c &lt; 0 ||  Cleric_Level__c &lt; 0 ||  Druid_Level__c &lt; 0||  Fighter_Level__c &lt; 0 ||  Monk_Level__c &lt; 0 ||  Paladin_Level__c &lt; 0 ||  Ranger_Level__c &lt; 0 ||  Rogue_Level__c &lt; 0 ||  Sorcerer_Level__c &lt; 0 ||  Warlock_Level__c &lt; 0 ||  Wizard_Level__c &lt; 0</errorConditionFormula>
    <errorMessage>You can&apos;t have negative levels!</errorMessage>
</ValidationRule>