Project1/force-app/main/default/objects/Guild_Member__c/validationRules/Must_have_at_least_1_level.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_at_least_1_level</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Level__c &lt;= 0</errorConditionFormula>
    <errorMessage>You must be at least level 1!</errorMessage>
</ValidationRule>