Project1/force-app/main/default/objects/Guild_Member__c/listViews/ArtificerView.listView-meta.xml
<ListView>
    <fullName>ArtificerView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Artificer_Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Artificer</value>
    </filters>
    <label>ArtificerView</label>
</ListView>