Project1/force-app/main/default/objects/Guild_Member__c/listViews/BarbarianView.listView-meta.xml
<ListView>
    <fullName>BarbarianView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Barbarian_Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Barbarian</value>
    </filters>
    <label>BarbarianView</label>
</ListView>