Project1/force-app/main/default/objects/Guild_Member__c/listViews/BardView.listView-meta.xml
<ListView>
    <fullName>BardView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Bard_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Bard</value>
    </filters>
    <label>BardView</label>
</ListView>