Project1/force-app/main/default/objects/Guild_Member__c/listViews/ClericView.listView-meta.xml
<ListView>
    <fullName>ClericView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Cleric_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Cleric</value>
    </filters>
    <label>ClericView</label>
</ListView>