Project1/force-app/main/default/objects/Guild_Member__c/listViews/DruidView.listView-meta.xml
<ListView>
    <fullName>DruidView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Druid_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Druid</value>
    </filters>
    <label>DruidView</label>
</ListView>