Project1/force-app/main/default/objects/Guild_Member__c/listViews/FighterView.listView-meta.xml
<ListView>
    <fullName>FighterView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Fighter_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Fighter</value>
    </filters>
    <label>FighterView</label>
</ListView>