Project1/force-app/main/default/objects/Guild_Member__c/listViews/MonkView.listView-meta.xml
<ListView>
    <fullName>MonkView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Monk_Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Monk</value>
    </filters>
    <label>MonkView</label>
</ListView>