Project1/force-app/main/default/objects/Guild_Member__c/listViews/PaladinView.listView-meta.xml
<ListView>
    <fullName>PaladinView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Paladin_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Paladin</value>
    </filters>
    <label>PaladinView</label>
</ListView>