Project1/force-app/main/default/objects/Guild_Member__c/listViews/RangerView.listView-meta.xml
<ListView>
    <fullName>RangerView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Ranger_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Ranger</value>
    </filters>
    <label>RangerView</label>
</ListView>