Project1/force-app/main/default/objects/Guild_Member__c/listViews/RogueView.listView-meta.xml
<ListView>
    <fullName>RogueView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Rogue_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Rogue</value>
    </filters>
    <label>RogueView</label>
</ListView>