Project1/force-app/main/default/objects/Guild_Member__c/listViews/SorcererView.listView-meta.xml
<ListView>
    <fullName>SorcererView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Sorcerer_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Sorcerer</value>
    </filters>
    <label>SorcererView</label>
</ListView>