Project1/force-app/main/default/objects/Guild_Member__c/listViews/WarlockView.listView-meta.xml
<ListView>
    <fullName>WarlockView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Warlock_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Warlock</value>
    </filters>
    <label>WarlockView</label>
</ListView>