Project1/force-app/main/default/objects/Guild_Member__c/listViews/WizardView.listView-meta.xml
<ListView>
    <fullName>WizardView</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Total_Level__c</columns>
    <columns>Wizard_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>includes</operation>
        <value>Wizard</value>
    </filters>
    <label>WizardView</label>
</ListView>